update openapi. api implementation
