# models/category.py
@@ -1,0 +1,4 @@
+class Category:
+    def __init__(self, category):
+        self.name = category.name
+        self.slug = category.slug
